<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UmpireBuddy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ball_button">Ball</string>
    <string name="strike_button">Strike</string>
    <string name="ball_text_label">Balls:</string>
    <string name="strike_text_label">Strikes:</string>
    <string name="strikes">0</string>
    <string name="balls">0</string>
    <string name="outs_text_label">Outs:</string>
    <string name="outs">0</string>

</resources>
