<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.umpirebuddy.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/ball_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ball_text_label"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/balls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balls" 
                android:textSize="40sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/strike_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strike_text_label"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/strikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strikes"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/strike_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strike_button"
                android:textSize="40sp" />

            <Button
                android:id="@+id/ball_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ball_button"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical" >

            <TextView
                android:id="@+id/outs_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outs_text_label"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/outs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outs"
                android:textSize="40sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>